feat: added nodemailer for sending emails
